# matome

./: .gitignore  README.md  debug_gpu.py  pyproject.toml  run_uat.py  summary_all.md  summary_kj.canvas
dev_documents/: ALL_SPEC.md  ARCHITECTURAL_ANALYSIS.md  FINAL_UAT.md  USER_TEST_SCENARIO.md
dev_documents/CYCLE01/: handoff_summary.md  test_execution_log.txt
dev_documents/CYCLE02/: test_execution_log.txt
dev_documents/CYCLE03/: test_execution_log.txt
dev_documents/phase01/CYCLE01/: SPEC.md
dev_documents/system_prompts/: SYSTEM_ARCHITECTURE.md
dev_documents/system_prompts/CYCLE01/: SPEC.md  UAT.md
dev_documents/system_prompts/CYCLE02/: SPEC.md  UAT.md
dev_documents/system_prompts/CYCLE03/: SPEC.md  UAT.md
dev_documents/system_prompts/CYCLE04/: SPEC.md  UAT.md
dev_documents/system_prompts/CYCLE05/: SPEC.md  UAT.md
dev_documents/system_prompts/CYCLE06/: SPEC.md  UAT.md
results_verification/: chunks.db  summary_all.md  summary_kj.canvas
src/domain_models/: __init__.py  config.py  constants.py  data_schema.py  manifest.py  metadata.py  types.py  verification.py
src/matome/: __init__.py  cli.py  config.py  interfaces.py  strategies.py
src/matome/agents/: __init__.py  strategies.py  summarizer.py  verifier.py
src/matome/engines/: __init__.py  chunker.py  cluster.py  embedder.py  interactive.py  interactive_raptor.py  raptor.py  semantic_chunker.py  token_chunker.py
src/matome/exceptions/: __init__.py
src/matome/exporters/: __init__.py  markdown.py  obsidian.py
src/matome/ui/: __init__.py  canvas.py  session.py  view_model.py
src/matome/utils/: __init__.py  compat.py  constants.py  io.py  prompts.py  serialization.py  store.py  store_schema.py  text.py  traversal.py  validation.py
test_output/: chunks.db  summary_all.md  summary_kj.canvas
test_output_base/: chunks.db
test_output_small/: chunks.db
tests/: conftest.py  constants.py  test_config.py
tests/integration/: test_agent_strategies.py  test_agent_strategy_wiring.py  test_backward_compatibility.py  test_chunking_pipeline.py  test_dikw_pipeline.py  test_embedding_clustering_pipeline.py  test_final_checks.py  test_full_pipeline_verification.py  test_hallucination_verification.py  test_interactive_engine.py  test_memory_safety.py  test_pipeline_errors.py  test_raptor_mode.py  test_raptor_pipeline.py  test_refinement_backend.py  test_store_concurrency.py  test_store_failure.py  test_store_failures.py  test_store_metadata.py  test_streaming_scalability.py
tests/uat/: test_cycle01_uat.py  test_cycle02_interactive_uat.py  test_cycle02_uat.py  test_cycle03_gui.py  test_cycle03_uat.py  test_cycle04_uat.py  test_cycle05_gui.py  test_cycle05_uat.py  test_cycle06_uat.py  test_gui_edge_cases.py  test_gui_mocked.py
tests/ui/: test_canvas_launch.py  test_session.py  test_zoom.py
tests/unit/: test_canvas.py  test_canvas_refine.py  test_chunker.py  test_cli.py  test_cli_safety.py  test_cli_serve.py  test_cluster.py  test_cluster_edge_cases.py  test_cluster_large.py  test_config_mode.py  test_config_validation.py  test_dikw_schema.py  test_dikw_strategies.py  test_domain_models.py  test_domain_models_cycle01.py  test_domain_models_cycle02.py  test_embedder.py  test_exporter_markdown.py  test_exporter_obsidian.py  test_interactive_engine.py  test_interactive_errors.py  test_interactive_raptor.py  test_interactive_raptor_extended.py  test_interface_compliance.py  test_io.py  test_metadata.py  test_raptor.py  test_raptor_dikw.py  test_raptor_retrieval.py  test_raptor_strategies.py  test_refinement_strategy.py  test_schema_models.py  test_security.py  test_semantic_chunker.py  test_serialization.py  test_store_edge_cases.py  test_store_extended.py  test_store_schema.py  test_strategies.py  test_streaming_pipeline.py  (+12 more)
tutorials/: 01_quickstart.ipynb  02_clustering_deep_dive.ipynb  02_interactive_refinement.ipynb  03_full_raptor_pipeline.ipynb  04_kj_method_visualization.ipynb  UAT_AND_TUTORIAL.ipynb  UAT_AND_TUTORIAL.py  chunks.db  summary_all.md
